--- a/home.css
+++ b/home.css
@@ -22,9 +22,7 @@
 }
 
 .popular_btn {
-    margin-top: 3vh;
     text-decoration: none;
-    padding: 0.75vh 0;
     text-align: center;
     width: 11vw;
     font-size: 19px;
@@ -39,6 +37,7 @@
 }
 
 .intro_box {
+    width: 890px;
     border-radius: 10px;
     background-color: #e3e1af;
 }
@@ -77,7 +76,6 @@
 
 /* Hiển thị thông tin nằm trên ảnh */
 .info-box {
-    width: 65%;
     color: black;
     text-decoration: none;
     position: absolute;
@@ -93,7 +91,7 @@
 
 
 ul li::before {
-  content: "- ";    
+    content: "- ";
 }
 
 /* Hiện thông tin khi hover */
@@ -102,39 +100,44 @@ ul li::before {
 }
 
 .intro-section {
-  position: relative;
-  width: 100%;
-  height: 90vh;
-  overflow: hidden;
-  margin-bottom: 5vh;
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    overflow: hidden;
+    margin-bottom: 5vh;
 }
 
 .bg-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: brightness(60%); /* Làm mờ ảnh */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(60%);
+    /* Làm mờ ảnh */
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* Lớp phủ tối thêm */
-  z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    /* Lớp phủ tối thêm */
+    z-index: 1;
 }
 
 .intro-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  z-index: 2;
-  text-align: center;
+    width: 70vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 2;
+    text-align: center;
 }
-.info-context{    
-  font-size: 26px;
+
+.info-context {
+
+    font-size: 26px;
 }
